# Project-Templates

./: README.md  bors.toml
.github/workflows/: ci.yml
templates/cpp-lib-cmake/: CMakeLists.txt
templates/cpp-lib-cmake/include/example/: example.h
templates/cpp-lib-cmake/src/example/: example.cpp
templates/cpp-lib-cmake/tests/example/: example_test.cpp
templates/github-pages/: README.md
templates/python-lib/: .coveragerc  .gitignore  bors.toml  mypy.ini  setup.py  tox.ini
templates/rust-lib/: Cargo.toml
templates/rust-lib/src/: lib.rs
templates/typescript-lib-node/: .eslintrc.json  package.json  tsconfig.json
templates/typescript-lib-node/src/: example.ts
templates/typescript-lib-node/src/tests/: example-tests.ts
